--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
          - Un paragraphe avec le prix "299€"
          - Un bouton "Ajouter au panier" avec l'id "add-btn"
     -->
+    <div class="product-card">
+        <img id="Produit" src="product.jpg" alt="Produit">
+        <h2>Smartphone XYZ</h2>
+        <p>299€</p>
+        <button type="button" id=""add-btn>Ajouter au panier</button> 
+    </div>
+
     
     <script src="script.js"></script>
 </body>
